1999-07-19  Harri Porten  <porten@kde.org>

	* pppdata.cpp: fixed a cause of those "Timeout expired" errors: if 
	the user never set the speed of the serial port gpppdata would return
	an empty string as speed(). The modem initialization code would
	fall back to 57600 but no speed would be passed to pppd. Whatever
	pppd does in this case (I haven't checked the sources yet) breaks the
	negotiation process.

1999-07-13  Harri Porten  <porten@kde.org>

	* added "Mode 7bit" and "Mode 8bit" script commands for CompuServe
	users. 7bit will simply strip off the highest bit to deal with the
	incoming 7E1 data. Write operations are not affected.
	* modem.cpp: try a tcsendbreak() if tcgetattr() fails. Ask for
	feedback if that solved the "modem is busy" error for anyone.
	* modem.cpp: read data in multiple chunks of up to 200 bytes. This 
	should speed up things and avoid problems with the socket notifier. 

1999-07-11  Harri Porten  <porten@kde.org>

	* connect.cpp: moved some code from readChar() into checkBuffers() 
	to clean up the setExpect() race condition fix.

1999-07-07  Mario Weilguni <mweilguni@kde.org>

	* kppp now finds the icons again

1999-07-06  Harri Porten  <porten@kde.org>

	* modem.cpp: adhere to the lock file format described in the
	Serial HOWTO (10 digits pid and a newline).
	* connect.cpp: fixed race condition that might have lead to data not
	being caught by "Expect" (found by Arch Harris <arch@cs.jmu.edu>)

1999-06-05  Harri Porten  <porten@kde.org>

	* pppstats.cpp: dropping the ifr_name #define hack allows compilation
	with --enable-final (saves 20 kB size)

1999-05-30  Harri Porten  <porten@kde.org>

	* connect.cpp: skip setting the volume if command is empty
	* switched from KWizard to QWizard
	* adaption to new KConfig iterators
	* partly switched to KStandardDirs

1999-05-07  Harri Porten  <porten@kde.org>

	* main.cpp: added public showStats() slot. Saved methods and p_kppp
	pointers in DockWidget and ConWindow.
